force-app/main/default/objects/Third_Party_Code__c/Third_Party_Code__c.object-meta.xml
<CustomObject>
    <label>Third Party Code</label>
    <nameField>
        <label>Third Party Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Third Party Code</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>