force-app/main/default/objects/Third_Party_Code__c/fields/Is_Code_Available_On_Web__c.field-meta.xml
<CustomField>
    <fullName>Is_Code_Available_On_Web__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Code Available On Web</label>
    <type>Checkbox</type>
</CustomField>