force-app/main/default/objects/Third_Party_Code__c/fields/Software_Code_Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Software_Code_Disclosure__c</fullName>
    <label>Software Code Disclosure</label>
    <referenceTo>Software_Code_Disclosure__c</referenceTo>
    <relationshipLabel>Third Party Code</relationshipLabel>
    <relationshipName>Third_Party_Code</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>