force-app/main/default/objects/Third_Party_Code__c/fields/Web_Page_Third_Party_License__c.field-meta.xml
<CustomField>
    <fullName>Web_Page_Third_Party_License__c</fullName>
    <label>Web Page Third Party License</label>
    <type>Url</type>
</CustomField>