force-app/main/default/objects/Third_Party_Code__c/fields/Web_Page_To_Download_Code__c.field-meta.xml
<CustomField>
    <fullName>Web_Page_To_Download_Code__c</fullName>
    <label>Web Page To Download Code</label>
    <type>Url</type>
</CustomField>